    tables from the spatial econometrics packages, spdep, splm, and
    sphet.
  * Extracted sanitize functions from print.xtable as stand-alone
    functions, and exported them.
  * Added option to produce math style exponents when sanitizing
    numbers, as suggested by Don Armstrong (don@donarmstrong.com), who
    also provided code


1.8-0
  * autoformat, xalign, xdigits, xdisplay from Arni Magnusson, added
    along with help file. Feature request #5686.
  * New argument 'auto' in xtable(), to call xalign, xdigits, and
    xdisplay at the time when xtable is created.
  * Updated xtableGallery vignette, now with TOC and revised examples.

1.7-4 (2014-09-11)
  * Changed tags in HTML to be all lower case, to be compatible with
    HTML5, part of feature request. (#5879)
  * Fixed booktabs bug (#2309), more of an enhancement really. Updated
    xtableGallery.snw to illustrate the change.

1.7-3 (2014-03-06)
  * Dealt with format.args bug (#4770). No code changes, but the
    documentation of print.xtable was changed to warn of the problem
    and to give a workaround as an example.

1.7-1 (2013-02-24)
  * Fixed logicals bug. (Req #1911)
  * Changed implementation of centering of tables. Instead of
    inserting a centered environment, now a \centering command is
    inserted. (Req #2104)
  * Allow for margin tables as possible with document class
    tufte-handout. An example of usage is found in the vignette.
    produced by margintable.Rnw which is in inst/doc. (Req #2168)
  * Added "timestamp" argument to print.xtable().  Set it to NULL
    if no timestamp is desired. (Req #2246)
  * Added "comment" argument to print.xtable().  Set it to FALSE
    to exclude the version and timestamp comment. (Req #2246)
  * Added "caption.width" argument.  If not NULL then the caption
    is placed in a "parbox" of the specified width. (Req #2247)
  * Remove the check on whether the "floating.environment" is in a